--- a/RevSpaceWebService/src/main/resources/application.properties
+++ b/RevSpaceWebService/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+//spring.datasource.url=${DB_URL}
+//spring.datasource.username=${DB_USERNAME}
+//spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.error.include-stacktrace=never
 server.port=${SERVER_PORT:8080}
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin
