--- a/RevSpaceWebService/src/main/resources/application.properties
+++ b/RevSpaceWebService/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.error.include-stacktrace=never
-server.port=${SERVER_PORT:8080}
+#server.port=${SERVER_PORT:8081}
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
+server.port=8081
